[gd_scene load_steps=4 format=3 uid="uid://c3hroplihhs6i"]

[ext_resource type="Texture2D" uid="uid://dqbimwegbpr8x" path="res://icon.svg" id="1_urlt4"]
[ext_resource type="Script" uid="uid://bega3rvhb88sq" path="res://scripts/canvas_dark.gd" id="2_hkcby"]
[ext_resource type="PackedScene" uid="uid://bu3bt1x2s1mpm" path="res://scenes/players/player_3.tscn" id="3_fc6pj"]

[node name="Node2D" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(22, 23)
scale = Vector2(9.8828125, 5.9140625)
texture = ExtResource("1_urlt4")

[node name="nv_duration" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="nv_cooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0
one_shot = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.14262748, 0.09900843, 0.21365145, 1)
script = ExtResource("2_hkcby")

[node name="player_3" parent="." instance=ExtResource("3_fc6pj")]

[connection signal="timeout" from="nv_duration" to="CanvasModulate" method="_on_nv_duration_timeout"]
[connection signal="timeout" from="nv_cooldown" to="CanvasModulate" method="_on_nv_cooldown_timeout"]
